--- a/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Site.master
+++ b/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Site.master
@@ -34,6 +34,7 @@
                 <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
                     <Items>
                         <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home"/>
+                        <asp:MenuItem NavigateUrl="~/Schedule.aspx" Text="Schedule" />
                         <asp:MenuItem NavigateUrl="~/About.aspx" Text="About"/>
                     </Items>
                 </asp:Menu>
