added employee and manager buttons

--- a/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Site.master
+++ b/ShifterMans Source Code/ShifterMans Source Code/ShifterMan/Site.master
@@ -34,7 +34,8 @@
                 <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
                     <Items>
                         <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home"/>
-                        <asp:MenuItem NavigateUrl="~/Schedule.aspx" Text="Schedule" />
+                        <asp:MenuItem NavigateUrl="~/Workers/Manager.aspx" Text="Manager"/>
+                        <asp:MenuItem NavigateUrl="~/Workers/Employee.aspx" Text="Employee"/>
                         <asp:MenuItem NavigateUrl="~/About.aspx" Text="About"/>
                     </Items>
                 </asp:Menu>
